examples/pass/basics/boolean.dew
// expect: true
def main = fn { true -> stdout; };
