examples/fail/infinite_recursion.dew
def loop = fn() -> Int { loop() }
def main = fn -> Int { loop() }
